tests/compile_fail/borrow/forward_box_associated_type.rs
trait Trait {
    type Assoc;
}

#[derive(derive_more::Borrow)]
#[borrow(forward)]
struct Foo<T: Trait>(Box<T::Assoc>);

fn main() {}
